syntax = "proto3";
option java_outer_classname = "LoginEventProtobuf";


message UserEvent {
    oneof event {
        LoginEvent loginEvent = 1;
        LogoutEvent logoutEvent = 2;
    }
    MessageType type = 3;
}

enum MessageType {
    LOGIN = 0;
    LOGOUT = 1;
}

message LoginEvent {
    string name = 1;
    int64 sessionId = 2;
    optional  string ip = 3;
    int64 time = 4;
}

message LogoutEvent {
    string name = 1;
    int64 sessionId = 2;
    optional string ip = 3;
    int64 time = 4;

}

